--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
     <string name="app_name">SampleAndroidProject</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
     <string name="open_bottom_sheet">open bottom sheet</string>
     <string name="open_pop_up_window">open pop-up window</string>
     <string name="open_web_view">open web-view</string>
     <string name="bottom_sheet_title">BottomSheetTitle</string>
     <string name="android">Android</string>
+    <string name="positive_button">Positive Button</string>
+    <string name="negative_button">Negative Button</string>
+    <string name="neutral_button">Neutral Button</string>
+    <string name="pop_up_title">Pop-Up Title</string>
 </resources>
