bottomSheet bug fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="turkish">Turkish</string>
     <string name="english">English</string>
     <string name="french">French</string>
+    <string name="ok">OK</string>
+    <string name="approve">Approve</string>
 </resources>
